# DHNB2024-workshop

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: deploy.yml
dhlab_workshop/: _config.yml  _toc.yml  abstract.md  intro.md  presentation.md  references.bib  resources.md  slideshow.html  slideshow.md
